--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,10 @@
 background-color: #fff;
 }
 
+.bg-color-personal-info {
+    background-color: #f4f4f4;
+}
+
 .ui-menu-color-home {
     background-color: #e67e22;
 }
@@ -102,7 +106,7 @@ header {
 .title {
     font-family: "Robotos", sans-serif;
     font-weight: 200;
-    font-size: 28;
+    font-size: 28px;
     margin-top: 20px;
     margin-bottom: 90px;
     color: #fff;
@@ -218,3 +222,69 @@ footer {
 #footer-details {
     padding: 20px;
 }
+
+
+/*--------------------------------Three reasans----------------------*/
+
+.three-reasons-icon {
+    font-size : 126%;
+    color: #e67e22;
+}
+
+.three-reasons-heading {
+    margin-bottom: 15px;
+    
+}
+
+/*--------------------------------Personal info----------------------*/
+
+.personal-info-item {
+    margin-bottom: 20px;
+    display: block;
+    clear: both;
+}
+
+.personal-info-item .key,
+.personal-info-item .value {
+    padding-right: 8px;
+    display: inline-block;
+}
+
+.personal-info-item .key p,
+.personal-info-item .value p {
+    margin: 0;
+}
+
+.personal-info-item .key {
+    width: 30%;
+    margin-right: 21px;
+    padding-top: 2px;
+    vertical-align: top;
+}
+
+.personal-info-item .key p {
+    font-weight: 700;
+}
+
+.personal-info-item .value {
+    position: relative;
+    width: 60%;
+}
+
+/*--------------------------------skills----------------------*/
+
+.progress {
+    position : relative;
+    height: 25px;
+    margin-bottom: 4px;
+}
+
+.progress-type {
+    position:absolute;
+    left: 0;
+    font-weight: 400;
+    padding: 3px 30px 2px 10px;
+    color: #fafafa;
+    background-color: rgba(25, 25, 25, 0.2);
+}
+
