--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@
 }
 
 .bg-color-three-reasons {
-background-color: #fff;
+    background-color: #fff;
 }
 
 .bg-color-personal-info {
@@ -18,6 +18,10 @@ background-color: #fff;
 
 .bg-color-work-history {
     background-color: #9b59b6;
+}
+
+.bg-color-contact {
+    background-color: #fff;
 }
 
 .ui-menu-color-home {
@@ -68,7 +72,8 @@ h4 {
     padding: 0 30px 30px;
     float: none;
 }
-.history-heading, 
+
+.history-heading,
 .section-heading {
     font-family: "Exo", sans-serif;
     font-weight: 300;
@@ -209,7 +214,7 @@ footer {
     border-radius: 50%;
     font-size: 13px;
     line-height: 7px;
-    text-align : center;
+    text-align: center;
     color: #fafafa;
     background: #8f8f8f;
     transition: all 0.35s ease-in-out;
@@ -231,13 +236,13 @@ footer {
 /*--------------------------------Three reasans----------------------*/
 
 .three-reasons-icon {
-    font-size : 126%;
+    font-size: 126%;
     color: #e67e22;
 }
 
 .three-reasons-heading {
     margin-bottom: 15px;
-    
+
 }
 
 /*--------------------------------Personal info----------------------*/
@@ -278,13 +283,13 @@ footer {
 /*--------------------------------skills----------------------*/
 
 .progress {
-    position : relative;
+    position: relative;
     height: 25px;
     margin-bottom: 4px;
 }
 
 .progress-type {
-    position:absolute;
+    position: absolute;
     left: 0;
     font-weight: 400;
     padding: 3px 30px 2px 10px;
@@ -295,9 +300,10 @@ footer {
 /*--------------------------------History----------------------*/
 
 .history-heading {
-    color: #fafafa;;
+    color: #fafafa;
+    ;
     margin-bottom: 50px;
-    
+
 }
 
 .timeline-item {
@@ -321,8 +327,9 @@ footer {
     font-family: "Exo", sans-serif;
     font-weight: 500;
     font-size: 0.8em;
-    padding: 0;;
-    margin:0;
+    padding: 0;
+    ;
+    margin: 0;
 }
 
 .timeline-item:after {
@@ -339,4 +346,37 @@ footer {
 
 .history-items {
     margin-bottom: 30px;
+}
+
+/*--------------------------------contant form----------------------*/
+
+.contact-heading: {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 20px;
+}
+
+.center-form {
+    padding-top: 10px;
+    margin: 0 auto;
+    max-width: 70%
+}
+
+button[type="submit"] {
+    margin-top: 15px;
+    margin-bottom: 20px;
+    color: #fafafa;
+    background-color: #e84610;
+}
+
+/*--------------------------------media Queries----------------------*/
+
+@media (min-width: 992px) {
+    .center-form {
+        padding-top: 30px;
+        min-height: 240px;
+        margin: 0;
+        max-width: 50%
+    }
 }
